testdata/invalid/duplicate_field.sol
rise Bad {
    private int x;
    private int x;
}
